# irafl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _main.cpp  cmake.sh  make.sh  view.sh
include/: irafl.h  irafl_wrapper.h  irafldef.h
src/: irafl.cpp  irafl_wrapper.cpp
src/functions/: functions.hpp  gaussblur.hpp  gray.hpp  lut3d.hpp  voronoi.hpp
